
7.73  2018-04-03

7.72  2018-04-02
  - Improved Mojo::Content::MultiPart performance for large numbers of parts.
    (philipspencer)
  - Fixed another problem with ordering of sources for content negotiation in
    Mojolicious::Renderer.

7.71  2018-03-15
  - Deprecated Mojo::build_tx, Mojo::Config, Mojo::handler and Mojo::log.
  - Added config method to Mojolicious.
  - Fixed exceptions caused by non-UTF-8 files in Mojo::Exception. (Grinnz)

7.70  2018-03-01
  - Fixed ordering of sources for content negotiation in Mojolicious::Renderer.
  - Fixed a content negotiation bug in Mojolicious::Renderer that prevented all
    sources from being considered at the same time.
  - Fixed source links in documentation browser.

7.69  2018-02-24
  - Improved respond_to method in Mojolicious::Controller and accepts helper in
    Mojolicious::Plugin::DefaultHelpers to no longer limit support for multiple
    MIME types to requests containing an X-Requested-With header, since browsers
    have become smarter about requesting what they actually want.

7.68  2018-02-22
  - Fixed RFC 7230 compliance bugs in Mojo::Message::Request that prevented
    "GET //foo/bar HTTP/1.1" to be interpreted as a request target in origin
    form.

7.67  2018-02-19
  - Modernized ".perltidyrc".
  - Fixed a bug in Mojo::Asset::File where forked processes could delete
    temporary files prematurely.

7.66  2018-02-13
  - This release contains fixes for security issues, everybody should upgrade!
  - Removed origin attribute of Mojo::Cookie::Response.
  - Removed deprecated data and remaining methods from Mojo::IOLoop::Delay.
  - Added host_only attribute to Mojo::Cookie::Response.
  - Improved all method in Mojo::Promise to resolve with no results if no
    promises have been passed.
  - Fixed a bug in Mojo::UserAgent::CookieJar where old cookies could be leaked.
    (exp-innit, sri)

7.65  2018-02-11
  - Added EXPERIMENTAL timing->begin, timing->elapsed, timing->rps and