@@ -1,5 +1,7 @@
 
 7.73  2018-04-03
+  - Removed deprecated use of Mojo::Promise::all and Mojo::Promise::race as
+    instance methods.
 
 7.72  2018-04-02
   - Improved Mojo::Content::MultiPart performance for large numbers of parts.
